--- a/src/RotateChain_frontend/.env.local
+++ b/src/RotateChain_frontend/.env.local
@@ -3,11 +3,12 @@ DFX_NETWORK=ic
 
 # Canister IDs
 # replace them with real canister ids
-STAKING_POOL_CANISTER_ID=rrkah-fqaaa-aaaaa-aaaaq-cai
-POOL_MANAGER_CANISTER_ID=ryjl3-tyaaa-aaaaa-aaaba-cai
-ICP_INDEX_CANISTER_ID=qhbym-qaaaa-aaaaa-aaafq-cai
-ICP_LEDGER_CANISTER_ID=ryjl3-tyaaa-aaaaa-aaaba-cai
-EVENT_CANISTER_ID=rrkah-fqaaa-aaaaa-aaaaq-cai
+STAKING_POOL_CANISTER_ID="rrkah-fqaaa-aaaaa-aaaaq-cai"
+POOL_MANAGER_CANISTER_ID="ryjl3-tyaaa-aaaaa-aaaba-cai"
+ICP_INDEX_CANISTER_ID="qhbym-qaaaa-aaaaa-aaafq-cai"
+ICP_LEDGER_CANISTER_ID="ryjl3-tyaaa-aaaaa-aaaba-cai"
+EVENT_CANISTER_ID="rrkah-fqaaa-aaaaa-aaaaq-cai"
+REACT_APP_PAYMENT_CANISTER_ID="ulvla-h7777-77774-qaacq"
 
 # API Endpoints
 ICP_GOVERNANCE_CANISTER_ID=rrkah-fqaaa-aaaaa-aaaaq-cai
