--- a/src/RotateChain_frontend/package.json
+++ b/src/RotateChain_frontend/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "@dfinity/agent": "^2.4.1",
     "@dfinity/auth-client": "^2.4.1",
-    "@dfinity/candid": "^2.1.3",
+    "@dfinity/candid": "^2.4.1",
+    "@dfinity/ledger-icp": "^4.0.0",
     "@dfinity/principal": "^2.4.1",
     "@heroicons/react": "^2.2.0",
     "@react-three/drei": "^10.4.4",
@@ -21,21 +22,26 @@
     "@tailwindcss/postcss": "^4.1.11",
     "@tailwindcss/vite": "^4.1.11",
     "@types/chart.js": "^2.9.41",
+    "@types/luxon": "^3.6.2",
     "@types/tailwindcss": "^3.0.11",
     "@types/three": "^0.178.0",
     "chart.js": "^4.5.0",
     "d3": "^7.9.0",
     "framer-motion": "^12.23.0",
+    "luxon": "^3.7.1",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^7.6.3",
     "recharts": "^3.1.0",
     "tailwindcss": "^4.1.11",
     "three": "^0.178.0"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/d3": "^7.4.3",
     "@types/node": "^24.0.14",
     "@types/react": "^18.3.23",
