--- a/.gitignore
+++ b/.gitignore
@@ -31,11 +31,42 @@ landingNew.tsx
 landingNewest.tsx
 testDisplay.tsx
 mockDashboard.tsx
+walletContext.ts
+onboarding.tsx
+sassyNav.tsx
+onboarding_loan_interest_added.txt
+onboarding_join.tsx
+landingNew.tsx
+landingNewest.tsx
 App.jsx
+19.0.0
+.env.local
+InstructionPallete.tsx
+icp_app.tsx
+test.
+loginsOnboarding.tsx
+liquidity_pool.tsx
+liquidity_graph_alone.tsx
+rotate_dashboard_liquidity_graph.tsx
+roitate_dashboard_new.tsx
+onboarding_newest.tsx
 bitcoin_wallet.tsx
 poolAnalyticsCard.tsx
 priceOracle2.ts
 pricesOracle.ts
+ledger-ref
+ledger-ref/
+dfx_json.txt
+internetIdentityButton.tsx
+transactionService.ts
+blockchain.ts
+authContext.ts
+email
+email/
+hooks
+hooks/
+bitcoin_canister.tsx
+eventService.ts
 bitcoin_app.tsx
 plug_connect.tsx
 bitcoin_canister.tsx
