--- a/src/RotateChain_frontend/.env
+++ b/src/RotateChain_frontend/.env
@@ -1,4 +1,5 @@
 
 #for the plug wallet
-VITE_REACT_APP_PAYMENT_CANISTER_ID="ulvla-h7777-77774-qaacq"
+VITE_REACT_APP_PAYMENT_CANISTER_ID="ufxgi-4p777-77774-qaadq-cai&id=ucwa4-rx777-77774-qaada-cai"
+VITE_CANISTER_ID_INTERNET_IDENTITY="rdmx6-jaaaa-aaaaa-aaadq-cai"
 
