--- a/src/RotateChain_frontend/package.json
+++ b/src/RotateChain_frontend/package.json
@@ -11,11 +11,12 @@
     "format": "prettier --write \"src/**/*.{json,js,jsx,ts,tsx,css,scss}\""
   },
   "dependencies": {
-    "@dfinity/agent": "^2.4.1",
-    "@dfinity/auth-client": "^2.4.1",
-    "@dfinity/candid": "^2.4.1",
+    "@dfinity/agent": "^3.1.0",
+    "@dfinity/auth-client": "^3.1.0",
+    "@dfinity/candid": "^3.1.0",
+    "@dfinity/identity": "^3.1.0",
     "@dfinity/ledger-icp": "^4.0.0",
-    "@dfinity/principal": "^2.4.1",
+    "@dfinity/principal": "^3.1.0",
     "@heroicons/react": "^2.2.0",
     "@react-three/drei": "^10.4.4",
     "@react-three/fiber": "^9.2.0",
@@ -29,6 +30,7 @@
     "d3": "^7.9.0",
     "framer-motion": "^12.23.0",
     "hash.js": "^1.1.7",
+    "ic-use-internet-identity": "^0.4.0",
     "luxon": "^3.7.1",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
@@ -37,6 +39,7 @@
     "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^7.6.3",
     "recharts": "^3.1.0",
+    "simple-cbor": "^0.4.1",
     "tailwindcss": "^4.1.11",
     "three": "^0.178.0"
   },
