--- a/.env
+++ b/.env
@@ -1,2 +1,10 @@
 #for the plug wallet
 VITE_REACT_APP_PAYMENT_CANISTER_ID="ulvla-h7777-77774-qaacq"
+
+# DFX CANISTER ENVIRONMENT VARIABLES
+DFX_VERSION='0.27.0'
+DFX_NETWORK='local'
+CANISTER_ID_ICP_LEDGER_CANISTER='uxrrr-q7777-77774-qaaaq-cai'
+CANISTER_ID='uxrrr-q7777-77774-qaaaq-cai'
+CANISTER_CANDID_PATH='/mnt/c/rogetz-folder/RotateChain_new/.dfx/local/canisters/icp_ledger_canister/icp_ledger_canister.did'
+# END DFX CANISTER ENVIRONMENT VARIABLES
