chain_mangement accounts updated

--- a/.env
+++ b/.env
@@ -4,12 +4,9 @@ VITE_REACT_APP_PAYMENT_CANISTER_ID="ulvla-h7777-77774-qaacq"
 # DFX CANISTER ENVIRONMENT VARIABLES
 DFX_VERSION='0.28.0'
 DFX_NETWORK='local'
-CANISTER_ID_ROTATECHAIN_BACKEND='tf7qn-pmes4-qww5w-eaheq'
-CANISTER_ID_ROTATECHAIN_FRONTEND='r2lyz-n6fs5-bzhdd-kzeoa'
-CANISTER_ID_CHAIN_MANAGEMENT='uzt4z-lp777-77774-qaabq-cai'
-CANISTER_ID_ICP_BACKEND='ivgj5-qeph5-t6oqd-zdf2q'
-CANISTER_ID_ICP_LEDGER_CANISTER='uxrrr-q7777-77774-qaaaq-cai'
-CANISTER_ID_INTERNET_IDENTITY='pvzvm-bjcou-wchjy-o3pza'
-CANISTER_ID='ivgj5-qeph5-t6oqd-zdf2q'
-CANISTER_CANDID_PATH='/mnt/d/rogetz-folder/rotatechain_new/.dfx/local/canisters/icp_backend/icp_backend.did'
+CANISTER_ID_INTERNET_IDENTITY='rdmx6-jaaaa-aaaaa-aaadq-cai'
+CANISTER_ID_ICP_LEDGER_CANISTER='uzt4z-lp777-77774-qaabq-cai'
+CANISTER_ID_CHAIN_MANAGEMENT='umunu-kh777-77774-qaaca-cai'
+CANISTER_ID='umunu-kh777-77774-qaaca-cai'
+CANISTER_CANDID_PATH='/mnt/d/rogetz-folder/rotatechain_new/.dfx/local/canisters/chain_management/chain_management.did'
 # END DFX CANISTER ENVIRONMENT VARIABLES
