--- a/.env
+++ b/.env
@@ -5,6 +5,7 @@ VITE_REACT_APP_PAYMENT_CANISTER_ID="ulvla-h7777-77774-qaacq"
 DFX_VERSION='0.28.0'
 DFX_NETWORK='local'
 CANISTER_ID_INTERNET_IDENTITY='rdmx6-jaaaa-aaaaa-aaadq-cai'
-CANISTER_ID='rdmx6-jaaaa-aaaaa-aaadq-cai'
-CANISTER_CANDID_PATH='/mnt/d/rogetz-folder/rotatechain_new/.dfx/local/canisters/internet_identity/internet_identity.did'
+CANISTER_ID_ICP_LEDGER_CANISTER='u6s2n-gx777-77774-qaaba-cai'
+CANISTER_ID='u6s2n-gx777-77774-qaaba-cai'
+CANISTER_CANDID_PATH='/mnt/d/rogetz-folder/rotatechain_new/.dfx/local/canisters/icp_ledger_canister/icp_ledger_canister.did'
 # END DFX CANISTER ENVIRONMENT VARIABLES
