backend src restructure

--- a/.env
+++ b/.env
@@ -4,8 +4,11 @@ VITE_REACT_APP_PAYMENT_CANISTER_ID="ulvla-h7777-77774-qaacq"
 # DFX CANISTER ENVIRONMENT VARIABLES
 DFX_VERSION='0.28.0'
 DFX_NETWORK='local'
-CANISTER_ID_INTERNET_IDENTITY='rdmx6-jaaaa-aaaaa-aaadq-cai'
+CANISTER_ID_ROTATECHAIN_FRONTEND='ux3vo-cwlou-lxjfg-ifc2q'
+CANISTER_ID_CHAIN_MANAGEMENT='uzt4z-lp777-77774-qaabq-cai'
+CANISTER_ID_ICP_BACKEND='7ikhx-dy7ev-4cyai-chhiq'
 CANISTER_ID_ICP_LEDGER_CANISTER='u6s2n-gx777-77774-qaaba-cai'
-CANISTER_ID='u6s2n-gx777-77774-qaaba-cai'
-CANISTER_CANDID_PATH='/mnt/d/rogetz-folder/rotatechain_new/.dfx/local/canisters/icp_ledger_canister/icp_ledger_canister.did'
+CANISTER_ID_INTERNET_IDENTITY='rdmx6-jaaaa-aaaaa-aaadq-cai'
+CANISTER_ID='7ikhx-dy7ev-4cyai-chhiq'
+CANISTER_CANDID_PATH='/mnt/d/rogetz-folder/rotatechain_new/.dfx/local/canisters/icp_backend/icp_backend.did'
 # END DFX CANISTER ENVIRONMENT VARIABLES
